# td-mass-validator

./: .gitignore  Pipfile  Procfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/: lint.sh  pytest.ini
src/core/: celery_app.py  middleware.py  settings.py  urls.py  wsgi.py
src/core/settings/: .env.dist  base.py  dev.py  production.py  tests.py
src/mass_validator/: apps.py  fields.py  forms.py  tasks.py  views.py
src/mass_validator/management/commands/: check_celery.py  check_redis.py
src/mass_validator/tests/: test_create_validation.py  test_task.py  test_update_validation.py  test_views.py
src/mass_validator/validator/: constants.py  helpers.py  row_models.py  search_api.py
src/templates/: _form_snippet.html  base.html  spinner.html
src/templates/mass_validator/: _sirets_result.html  log_me_in.html  result.html  update_result.html  upload.html  validate_create.html  validate_update.html
src/tst_files/: create_etabs_not_ok.xlsx  create_etabs_ok.xlsx  file_not_ok_company_type.xlsx  modif_etabs_not_ok.xlsx  modif_etabs_ok.xlsx  ~$modif_etabs_not_ok.xlsx
