[tool.poetry]
name = "td-mass-validator"
version = "0.1.0"
description = "Trackdechets mass import pre-validator"
authors = ["Laurent Paoletti <lp@providenz.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
attrs = "^21.4.0"
openpyxl = "^3.0.9"
httpx = "^0.22.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
