[project]
name = "trackdechets-mass-validator"
version = "0.1.0"
description = "MTE Mass Validator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.1",
    "attrs==24.2.0",
    "openpyxl==3.1.5",
    "httpx==0.27.2",
    "django-environ==0.11.2",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "celery==5.4.0",
    "elasticsearch7==7.17.9",
    "redis==5.0.8"
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "django-debug-toolbar<6",
    "django-extensions>=4.1",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pywatchman",
    "ruff>=0.14.3",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "factory-boy",
]
[tool.ruff]
target-version = "py311"
line-length = 119
extend-exclude = ["migrations"]
[tool.bandit]
exclude_dirs = ["tests", "/core/settings/dev.py"]